--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.mycompany.kabayataiki"
+      "package": "com.mycompany.kabayataiki",
+      "permissions": []
     }
   }
 }
