--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.mycompany.kabayataiki",
+      "package": "com.pomodoro.kabayataiki",
       "permissions": []
     }
   }
